--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /*
-Theme Name: Twenty Twenty-Fourkajakjhsd
-Theme URI: https://wordpress.org/themes/twentytwentyfour/
-Author: the WordPress team
-Author URI: https://wordpress.org
+Theme Name: CodingDuluAja Theme 2024
+Author: Budiyono
+Author URI: https://www.condingduluaja.com
 */
