--- a/style.css
+++ b/style.css
@@ -6,63 +6,302 @@ Author URI: https://www.condingduluaja.com
 Version: 1.0.0
 */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    line-height: 1;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
+ol,
+ul {
+    list-style: none;
 }
 
-nav {
-    margin-top: 10px;
+blockquote,
+q {
+    quotes: none;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
 
-nav ul li {
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* ===== CDA CSS */
+:root {
+    --primary: #39424B;
+    --white: #fff;
+    --grey-shadow: #626262;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1d1d1d;
+}
+
+.container {
+    margin: 0 auto;
+    /* background-color: #fefefe; */
+    background-color: var(--white);
+}
+
+.main-header {
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 1px solid #1d1d1d;
+    align-items: center;
+    padding: 0.5rem 5%;
+    background-color: var(--primary);
+}
+
+.main-header * {
+    color: var(--white);
+}
+
+.brand {
     display: inline-block;
-    margin-right: 10px;
+    font-weight: bold;
+    font-size: 1.7rem;
+    color: inherit;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/* style.css */
-nav {
-    background-color: #333;
-    padding: 10px;
-    text-align: center;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-nav ul li a {
-    color: #fff;
+.brand a {
     text-decoration: none;
+}
+
+#main-navbar ul {
+    list-style: none;
+}
+
+#main-navbar ul li {
+    display: inline-block;
+}
+
+#main-navbar ul li a {
+    display: inline-block;
+    padding: 1rem 0.5rem 0.7rem 0.5rem;
+    text-decoration: none;
+    /* border-bottom: 0.3rem solid transparent; */
+    transition: color 0.3s linear;
+}
+
+#main-navbar ul li a:hover {
+    color: #43D7FF;
+}
+
+/* card post */
+.card-post {
+    padding: 0.7rem 1rem;
+    border: 0.1rem solid var(--grey-shadow);
+    margin: 0.5rem 0;
+    border-radius: 0.2rem;
+    /* box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1); */
+    box-shadow: 0rem 0.1rem 0.3rem var(--grey-shadow);
+}
+
+.excerpt {
+    margin-top: .2rem;
+    margin-bottom: 0.7rem;
+}
+
+/* main content */
+article h2 a {
+    text-decoration: none;
+    color: black;
+}
+
+.title-list {
+    margin: .5rem 0px;
+    display: inline-block;
+    font-size: 1.2rem;
+}
+
+.footer {
+    border-top: 1px solid #1d1d1d;
+    background-color: var(--primary);
+    text-align: center;
+    padding: 1rem 0;
+    margin-top: 0.5rem;
+}
+
+.footer * {
+    color: var(--white);
+}
+
+.content {
+    display: flex;
+    /* padding: 0 0.5rem; */
+    justify-content: center;
+    min-height: 80vh;
+}
+
+.main-content {
+    padding: 0 0.5rem;
+    width: 60%;
+}
+
+.side-left-content {
+    padding: 0 0.5rem;
+    width: 20%;
+}
+
+.side-right-content {
+    padding: 0 0.5rem;
+    width: 20%;
+}
+
+.pagination {
+    /* border: 1px solid black; */
+    /* padding: 1rem; */
+    margin: 2rem auto;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.pagination .nav-links a {
+    text-decoration: none;
+    color: inherit;
+    padding: 0.4rem 0.7rem;
+    border: 0.1rem solid var(--grey-shadow);
+    margin: 0.5rem 0;
+    border-radius: 0.2rem;
+}
+
+.pagination .nav-links a:hover {
+    color: var(--white);
+    padding: 0.5rem 1rem;
+    border: 0.1rem solid var(--grey-shadow);
+    background-color: var(--grey-shadow);
+    margin: 0.5rem 0;
+    border-radius: 0.2rem;
+    transition: 0.3s;
+}
+
+.pagination .nav-links span:hover {
+    cursor: not-allowed;
+}
+
+.pagination .nav-links span {
+    text-decoration: none;
+    color: var(--white);
+    padding: 0.5rem 1rem;
+    background-color: var(--grey-shadow);
+    border: 0.1rem solid var(--grey-shadow);
+    margin: 0.5rem 0;
+    border-radius: 0.2rem;
 }
