--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ section {
 }
 
 body {
-    line-height: 1;
+    line-height: 1.2;
 }
 
 ol,
@@ -304,4 +304,35 @@ article h2 a {
     border: 0.1rem solid var(--grey-shadow);
     margin: 0.5rem 0;
     border-radius: 0.2rem;
+}
+.time-post {
+    font-size: 0.8rem;
+    padding: 0.2rem 0;
+}
+
+/* Single Article Style */
+.cda-single-post {
+    box-sizing: border-box;
+    padding: 1rem 0.5rem;
+}
+.blok-title {
+    margin-bottom: 0.5rem;
+    border-bottom: 0.1rem solid var(--primary);
+}
+.title-article {
+    font-size: 1.5rem;
+    font-weight: bold;
+    box-sizing: border-box;
+    padding: 0.5rem 0;
+}
+.wp-block-code {
+    background-color: #eee;
+    padding: 0.8rem 0;
+    display: block;
+    font-family: monospace;
+    white-space-collapse: preserve;
+    text-wrap: nowrap;
+    margin: 1em 0px;
+    font-size: 0.9rem;
+    line-height: 1;
 }
