--- a/style.css
+++ b/style.css
@@ -5,143 +5,6 @@ Author: Budiyono
 Author URI: https://www.condingduluaja.com
 Version: 1.0.0
 */
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1.2;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
 /* ===== CDA CSS */
 :root {
     --primary: #39424B;
@@ -153,21 +16,26 @@ table {
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #1d1d1d;
+    margin: 0;
 }
 
 .container {
     margin: 0 auto;
     /* background-color: #fefefe; */
     background-color: var(--white);
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .main-header {
     display: flex;
+    width: 100%;
     justify-content: space-around;
     border-bottom: 1px solid var(--grey-divider);
     align-items: center;
     padding: 0 5%;
     background-color: var(--primary);
+    box-sizing: border-box;
 }
 
 .main-header * {
@@ -179,6 +47,7 @@ body {
     font-weight: bold;
     font-size: 1.7rem;
     color: inherit;
+    margin: 0;
 }
 
 .brand a {
@@ -246,6 +115,7 @@ body {
     text-align: center;
     padding: 1rem 0;
     margin-top: 0.5rem;
+    width: 100%;
 }
 
 .footer * {
@@ -257,31 +127,26 @@ body {
     /* padding: 0 0.5rem; */
     justify-content: center;
     min-height: 80vh;
+    width: 100%;
 }
 
 .main-content {
     padding: 0 0.5rem;
-    width: 60%;
-
+    width: 50%;
+    margin: 0 5%;
     & p {
         margin: 1rem 0;
+        font-size: 1.3rem;
+        line-spacing: 1.1;
     }
 }
 
 /* sisi kiri */
 .side-left-content,
 .side-right-content {
-    padding: 1rem 1rem;
+    padding: 1rem 1.3rem;
     width: 20%;
-    /* border: 0.1rem solid var(--grey-shadow); */
-    margin: 0.5rem 0.5rem;
-    /* box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1); */
-    /* box-shadow: 0rem 0.1rem 0.3rem var(--grey-shadow); */
     box-sizing: border-box;
-    /* & #loc-bar h2 {
-        margin: 0.5rem 0;
-    } */
-
     & li {
         list-style: none;
         /* text-decoration: none; */
@@ -407,7 +272,7 @@ body {
     box-sizing: border-box;
     padding: 0.5rem 0;
 }
-
+/*
 .wp-block-code {
     background-color: #eee;
     padding: 0.8rem 0 0.8rem 1rem;
@@ -420,7 +285,7 @@ body {
     line-height: 1.1;
     border-left: 0.2rem solid tomato;
 }
-
+*/
 /* Footer Article */
 .footer-article {
     border-top: 1px solid var(--grey-divider);
