--- a/style.css
+++ b/style.css
@@ -82,30 +82,37 @@ body {
 .card-post {
     padding: 0.7rem 1rem;
     border: 0.1rem solid var(--grey-shadow);
-    margin: 0.5rem 0;
+    margin: 1.5rem 0;
     border-radius: 0.2rem;
     /* box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1); */
     box-shadow: 0rem 0.1rem 0.3rem var(--grey-shadow);
-}
 
-.excerpt {
-    margin-top: .2rem;
-    margin-bottom: 0.7rem;
-}
+    /* main content */
+    & .title-list {
+        margin: .5rem 0px;
+        display: inline-block;
+        font-size: 1.2rem;
 
-/* main content */
-.title-list {
-    margin: .5rem 0px;
-    display: inline-block;
-    font-size: 1.2rem;
+        & a {
+            text-decoration: none;
+            color: inherit;
 
-    & a {
-        text-decoration: none;
-        color: inherit;
-
-        &:hover {
-            color: tomato;
+            &:hover {
+                color: tomato;
+            }
         }
+    }
+
+    & .excerpt {
+        margin-top: .2rem;
+        margin-bottom: 0.7rem;
+        font-size: 1rem;
+    }
+
+    & .time-post {
+        font-size: 0.8rem;
+        padding: 0.1rem 0;
+        margin: 0 0 0.5rem 0;
     }
 }
 
@@ -134,6 +141,7 @@ body {
     padding: 0 0.5rem;
     width: 50%;
     margin: 0 5%;
+
     & p {
         margin: 1rem 0;
         font-size: 1.3rem;
@@ -147,8 +155,10 @@ body {
     padding: 1rem 1.3rem;
     width: 20%;
     box-sizing: border-box;
+
     & li {
         list-style: none;
+
         /* text-decoration: none; */
         & a {
             white-space: nowrap;
@@ -160,11 +170,16 @@ body {
             padding: 0.2rem 0.3rem;
             transition: all .2s linear;
             border-left: 0.2rem solid var(--primary);
+
             &:hover {
                 color: tomato;
                 /* background-color: var(--primary); */
                 border-color: tomato;
             }
+        }
+
+        & ul {
+            padding: 0;
         }
     }
 
@@ -189,13 +204,16 @@ body {
         background-color: transparent;
     }
 
-    & .widget_block 
+    & .widget_block
+
     /* & .widget_search ,
     & .widget_recent_entries , */
     /* & .wp-block-categories { */
         {
         margin: 0.5rem 0;
     }
+
+
 }
 
 /* sisi kanan */
@@ -229,8 +247,10 @@ body {
     & .nav-links a:hover {
         color: var(--white);
         padding: 0.5rem 1rem;
-        border: 0.1rem solid var(--grey-shadow);
-        background-color: var(--grey-shadow);
+        /* border: 0.1rem solid var(--grey-shadow); */
+        /* background-color: var(--grey-shadow); */
+        border: 0.1rem solid tomato;
+        background-color: tomato;
         margin: 0.5rem 0;
         border-radius: 0.2rem;
     }
@@ -250,28 +270,108 @@ body {
     }
 }
 
-.time-post {
-    font-size: 0.8rem;
-    padding: 0.2rem 0;
-}
+
 
 /* Single Article Style */
 .cda-single-post {
     box-sizing: border-box;
     padding: 1rem 0.5rem;
+
+    & .blok-title {
+        /* margin-bottom: 0.5rem; */
+        border-bottom: 0.1rem solid var(--grey-divider);
+
+        & h1 {
+            margin: 0;
+        }
+    }
+
+    & .time-post {
+        font-size: 1rem;
+        /* padding: 0.1rem 0; */
+        /* margin: 0 0 0.5rem 0; */
+        /* font-family: 'Courier New', Courier, monospace */
+    }
+
+    & .title-article {
+        font-size: 1.5rem;
+        font-weight: bold;
+        box-sizing: border-box;
+        padding: 0.5rem 0;
+    }
+
+    .footer-article {
+        border-top: 1px solid var(--grey-divider);
+        border-bottom: 1px solid var(--grey-divider);
+        margin: 1rem 0;
+        padding: 0.5rem 0;
+
+        & .tags {
+            padding: 0.3rem 0;
+
+            & a {
+                color: inherit;
+                padding: 0.5rem 0.3rem;
+
+                &:hover {
+                    color: tomato;
+                }
+            }
+        }
+
+        & .categories {
+            padding: 0.3rem 0;
+
+            & a {
+                color: inherit;
+                padding: 0.5rem 0.3rem;
+
+                &:hover {
+                    color: tomato;
+                }
+            }
+        }
+    }
+
+    .pagination-single-post {
+        padding: 1rem 0;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+
+        & .next-prev-flex {
+            display: flex;
+            flex-direction: column
+        }
+
+        & .prev-post {
+            width: 50%;
+        }
+
+        & .next-post {
+            text-align: end;
+            width: 50%;
+        }
+
+        & .next-prev-flex {
+            & a {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                text-decoration: none;
+                color: inherit;
+                padding: 0.5rem 0;
+
+                &:hover {
+                    color: tomato;
+                }
+            }
+        }
+    }
 }
 
-.blok-title {
-    margin-bottom: 0.5rem;
-    border-bottom: 0.1rem solid var(--grey-divider);
-}
 
-.title-article {
-    font-size: 1.5rem;
-    font-weight: bold;
-    box-sizing: border-box;
-    padding: 0.5rem 0;
-}
+
 /*
 .wp-block-code {
     background-color: #eee;
@@ -287,71 +387,3 @@ body {
 }
 */
 /* Footer Article */
-.footer-article {
-    border-top: 1px solid var(--grey-divider);
-    border-bottom: 1px solid var(--grey-divider);
-    margin: 1rem 0;
-    padding: 0.5rem 0;
-
-    & .tags {
-        padding: 0.3rem 0;
-
-        & a {
-            color: inherit;
-            padding: 0.5rem 0.3rem;
-
-            &:hover {
-                color: tomato;
-            }
-        }
-    }
-
-    & .categories {
-        padding: 0.3rem 0;
-
-        & a {
-            color: inherit;
-            padding: 0.5rem 0.3rem;
-
-            &:hover {
-                color: tomato;
-            }
-        }
-    }
-}
-
-.pagination-single-post {
-    padding: 1rem 0;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-
-    & .next-prev-flex {
-        display: flex;
-        flex-direction: column
-    }
-
-    & .prev-post {
-        width: 50%;
-    }
-
-    & .next-post {
-        text-align: end;
-        width: 50%;
-    }
-
-    & .next-prev-flex {
-        & a {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            text-decoration: none;
-            color: inherit;
-            padding: 0.5rem 0;
-
-            &:hover {
-                color: tomato;
-            }
-        }
-    }
-}
