custom meta type

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ Version: 1.0.0
 
     --primary: #373f44;
     --white: #fafaf6;
-    --secondary: #2ab57d;
+    --secondary: #f6501d;
     --grey-shadow: #626262;
     --grey-divider: #DCDCDE;
 
