--- a/style.css
+++ b/style.css
@@ -11,12 +11,17 @@ Version: 1.0.0
     --white: #fff;
     --grey-shadow: #626262;
     --grey-divider: #DCDCDE; */
-
-    --primary: #373f44;
+    --cda-black: #000000;
+    --primary: #003349;
+    --primary2: #002230;
     --white: #fafaf6;
-    --secondary: #f6501d;
+    --secondary: #1E77BC;
+    --info: #76c2e0;
+    --link-primary: #1a749e;
+    --link-secondary: #3ba2ce;
     --grey-shadow: #626262;
     --grey-divider: #DCDCDE;
+    --grey-font: #4A4D4F;
 
     /* palette 2 ok */
     --aa: #373f44;
@@ -31,7 +36,7 @@ Version: 1.0.0
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    color: #1d1d1d;
+    color: var(--cda-black);
     margin: 0;
 }
 
@@ -60,6 +65,29 @@ body {
     & .menu-toggle {
         display: none;
     }
+
+    &>#main-navbar {
+        &>ul {
+            list-style: none;
+            display: flex;
+            margin: 0;
+
+            & li {
+                & a {
+                    display: block;
+                    text-decoration: none;
+                    font-size: 1.3rem;
+                    box-sizing: border-box;
+                    padding: 1rem;
+
+                    &:hover,
+                    &:active {
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .brand {
@@ -74,31 +102,7 @@ body {
     text-decoration: none;
 }
 
-#main-navbar {
-    & ul {
-        list-style: none;
 
-        & li {
-            float: left;
-
-            & a {
-                display: block;
-                padding: 1rem 0.5rem 0.8rem 0.5rem;
-                text-decoration: none;
-                transition: all 0.3s;
-                font-size: 1.3rem;
-                border-bottom: 0.3rem solid transparent;
-                box-sizing: border-box;
-
-                &:hover,
-                &:active {
-                    color: var(--secondary);
-                    border-color: var(--secondary);
-                }
-            }
-        }
-    }
-}
 
 /* card post */
 
@@ -127,6 +131,10 @@ body {
 .home-page {
     width: 80%;
 
+    &>h2:last-child {
+        text-align: center;
+    }
+
     &>.header-home-page {
 
         & .search-form {
@@ -147,18 +155,18 @@ body {
                 padding: 0.3rem 1rem;
                 background-color: var(--primary);
                 color: var(--white);
-                transition: color 0.3s;
+                transition: background-color 0.3s;
 
                 &:hover {
                     cursor: pointer;
-                    color: var(--secondary);
-                    /* background-color: inherit; */
+                    background-color: var(--white);
+                    color: inherit;
                 }
             }
         }
 
         /* background-color: #007b53; */
-        &>.categories {
+        &>.categories>ul {
             display: flex;
             box-sizing: border-box;
             overflow: auto;
@@ -175,14 +183,16 @@ body {
                 text-decoration: none;
                 padding: 0.3rem 0.7rem;
                 color: var(--white);
-                border: 1px solid var(--primary);
+                border: 2px solid var(--primary);
                 margin: 0 0.5rem;
                 border-radius: 0.2rem;
                 white-space: nowrap;
                 background-color: var(--primary);
+                transition: all 0.2s;
 
                 &:hover {
-                    color: var(--secondary);
+                    background-color: var(--white);
+                    color: inherit;
                 }
             }
 
@@ -219,10 +229,9 @@ body {
             & a {
                 text-decoration: none;
                 color: inherit;
-                transition: color 0.3s;
 
                 &:hover {
-                    color: var(--secondary);
+                    text-decoration: underline;
                 }
             }
         }
@@ -234,8 +243,7 @@ body {
 
             & a {
                 text-decoration: none;
-                transition: text-decoration 0.3s;
-                color: var(--secondary);
+                color: var(--link-primary);
 
                 &:hover {
                     text-decoration: underline;
@@ -250,22 +258,28 @@ body {
         }
 
         & .tags {
+            display: flex;
+            padding: 0.2rem;
+            box-sizing: border-box;
+
             & * {
-                color: var(--secondary);
+                color: var(--primary);
             }
 
             & span {
+                display: block;
                 padding-right: 0.5rem;
+                height: 15px;
+                width: 15px;
             }
 
             & a {
                 padding: 0 0.5rem;
                 text-decoration: none;
-                transition: color 0.3s;
                 font-size: 0.9rem;
 
                 &:hover {
-                    color: inherit;
+                    text-decoration: underline;
                 }
             }
 
@@ -274,12 +288,14 @@ body {
 
 
 }
+
 .not-found {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
+
 /* sisi kiri */
 .side-left-content,
 .side-right-content {
@@ -287,57 +303,59 @@ body {
     width: 20%;
     box-sizing: border-box;
 
-    &>li {
+    &>ul {
         list-style: none;
+        padding: 0;
+        margin: 0;
 
-        & a {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            text-decoration: none;
-            color: inherit;
-            display: block;
-            padding: 0.2rem 0.3rem;
-            transition: all .3s;
-            border-left: 0.2rem solid var(--primary);
-
-            &:hover {
-                color: var(--secondary);
-                border-color: var(--secondary);
-            }
-        }
-
-        &>ul {
-            padding: 0;
+        &>li {
             list-style: none;
 
-            &>li>ul {
+            & a {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                text-decoration: none;
+                color: var(--grey-font);
+                display: block;
+                padding: 0.3rem 0;
+
+                &:hover {
+                    text-decoration: underline;
+                    color: inherit;
+                }
+            }
+
+            &>ul {
+                padding: 0;
                 list-style: none;
-                padding-left: 1.5rem;
+
+                &>li>ul {
+                    list-style: none;
+                    padding-left: 1.5rem;
+                }
             }
         }
+
+        & .wp-block-heading {
+            font-size: 1.1rem;
+            font-weight: bold;
+        }
+
+        & .wp-block-search__input {
+            padding: 0.5rem;
+            border-radius: 0.3rem;
+        }
+
+        & .wp-block-search__button {
+            border-radius: 0.3rem;
+            background-color: transparent;
+        }
+
+        & .widget_block {
+            margin: 0.5rem 0;
+        }
     }
-
-    & .wp-block-heading {
-        font-size: 1.1rem;
-        font-weight: bold;
-    }
-
-    & .wp-block-search__input {
-        padding: 0.5rem;
-        border-radius: 0.3rem;
-    }
-
-    & .wp-block-search__button {
-        border-radius: 0.3rem;
-        background-color: transparent;
-    }
-
-    & .widget_block {
-        margin: 0.5rem 0;
-    }
-
-
 }
 
 .pagination {
@@ -345,37 +363,36 @@ body {
     text-align: center;
     font-size: 0.9rem;
 
-    & .nav-links a {
-        text-decoration: none;
-        color: inherit;
-        padding: 0.4rem 0.7rem;
-        border: 0.1rem solid var(--grey-shadow);
-        margin: 0.5rem 0;
-        border-radius: 0.2rem;
-        transition: 0.3s;
-    }
+    & .nav-links {
+        &>a {
+            text-decoration: none;
+            color: inherit;
+            padding: 0.4rem 0.7rem;
+            border: 0.1rem solid var(--primary);
+            margin: 0.5rem 0;
+            border-radius: 0.2rem;
+            transition: all 0.3s;
 
-    & .nav-links a:hover {
-        color: var(--white);
-        padding: 0.5rem 1rem;
-        border: 0.1rem solid var(--secondary);
-        background-color: var(--secondary);
-        margin: 0.5rem 0;
-        border-radius: 0.2rem;
-    }
+            &:hover {
+                color: var(--white);
+                padding: 0.5rem 1rem;
+                background-color: var(--primary);
+            }
+        }
 
-    & .nav-links span:hover {
-        cursor: not-allowed;
-    }
+        & span {
+            text-decoration: none;
+            color: var(--white);
+            padding: 0.5rem 1rem;
+            background-color: var(--primary);
+            border: 0.1rem solid var(--primary);
+            margin: 0.5rem 0;
+            border-radius: 0.2rem;
 
-    & .nav-links span {
-        text-decoration: none;
-        color: var(--white);
-        padding: 0.5rem 1rem;
-        background-color: var(--grey-shadow);
-        border: 0.1rem solid var(--grey-shadow);
-        margin: 0.5rem 0;
-        border-radius: 0.2rem;
+            &:hover {
+                cursor: not-allowed;
+            }
+        }
     }
 }
 
@@ -392,7 +409,11 @@ body {
         display: inline-block;
         text-decoration: none;
         padding: 0.3rem 0;
-        transition: color 0.3s;
+        margin: 0.2rem 0;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     & li {
@@ -403,10 +424,6 @@ body {
         & ul {
             padding: 0;
             margin: 0.3rem 0;
-
-            &>li>a:hover {
-                color: var(--secondary);
-            }
         }
 
         &>ul {
@@ -419,12 +436,6 @@ body {
                 &>a {
                     font-size: 1.1rem;
                     font-weight: bold;
-                    margin: 0.2rem 0;
-                    color: var(--secondary);
-
-                    &:hover {
-                        color: inherit;
-                    }
                 }
             }
         }
@@ -439,24 +450,25 @@ body {
 & .cda-loc-container {
     & .cda-loc-header {
         font-size: 1.1rem;
+        display: none;
     }
 
     &>ul {
         padding: 0;
         margin: 0;
+
         &>li {
 
             list-style: none;
 
             &>a {
-                color: inherit;
+                color: var(--grey-font);
                 text-decoration: none;
-                border-left: 0.2rem solid var(--primary);
-                transition: all .3s;
-                padding: 0.2rem 0.3rem;
-                &:hover{
-                    border-color: var(--secondary);
-                    color: var(--secondary);
+                padding: 0.3rem 0;
+
+                &:hover {
+                    color: inherit;
+                    text-decoration: underline;
                 }
             }
         }
@@ -491,28 +503,17 @@ body {
         margin: 1rem 0;
         padding: 0.5rem 0;
 
-        & .tags {
-            padding: 0.3rem 0;
-
-            & a {
-                color: inherit;
-                padding: 0.5rem 0.3rem;
-
-                &:hover {
-                    color: var(--secondary);
-                }
-            }
-        }
-
+        & .tags,
         & .categories {
             padding: 0.3rem 0;
 
             & a {
-                color: inherit;
                 padding: 0.5rem 0.3rem;
+                color: var(--link-primary);
+                text-decoration: none;
 
                 &:hover {
-                    color: var(--secondary);
+                    text-decoration: underline;
                 }
             }
         }
@@ -544,11 +545,11 @@ body {
                 overflow: hidden;
                 text-overflow: ellipsis;
                 text-decoration: none;
-                color: inherit;
+                color: var(--link-primary);
                 padding: 0.5rem 0;
 
                 &:hover {
-                    color: var(--secondary);
+                    text-decoration: underline;
                 }
             }
         }
@@ -604,9 +605,19 @@ body {
 
     .main-content {
         width: 100%;
-        &>.cda-single-post{
+
+        &>.cda-single-post {
             &>.cda-loc-container {
                 display: block;
+
+                & ul,
+                &li {
+                    list-style: decimal;
+                }
+
+                &>ul {
+                    padding-left: 1rem;
+                }
             }
         }
     }
@@ -626,6 +637,10 @@ body {
                 display: flex;
                 flex-direction: column;
                 width: 100%;
+
+                &>li>a {
+                    padding-left: 0;
+                }
             }
         }
 
@@ -654,3 +669,25 @@ body {
         }
     }
 }
+
+/* @media (prefers-color-scheme: dark) {
+    :root {
+        --cda-black: #FFF;
+        --primary: #313131;
+        --primary2: #002230;
+        --white: #23292F;
+        --secondary: #090909;
+        --info: #76c2e0;
+        --link-primary: #1a749e;
+        --link-secondary: #3ba2ce;
+        --grey-shadow: #626262;
+        --grey-divider: #DCDCDE;
+        --grey-font: #4A4D4F;
+    }
+    * {
+        color: var(--wp--preset--color--white) !important;
+    }
+    .wp-block-code {
+        background-color: #343434;
+    }
+} */
